<resources>
    <string name="app_name">SpaceNews</string>
    <string name="open_link">Open Link</string>
    <string name="info">Info</string>
    <string name="refresh">Refresh</string>
    <string name="profile_name">Rafik Gasparyan</string>
    <string name="contact_me_by">Contact me by</string>
    <string name="android_developer">Android developer</string>
    <string name="developer">Developer</string>
    <string name="project_source">Project source</string>
    <string name="click_here">Click Here</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>