<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/dp_10"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appImage"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_110"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_16"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_name"
            style="@style/TextStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/developer_title"
            style="@style/TextStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/developer"
            android:textSize="@dimen/sp_21" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center_vertical"
                app:civ_border_width="4dp"
                app:civ_shadow="false" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name"
                    android:textSize="@dimen/sp_19" />


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_developer"
                    android:textSize="@dimen/sp_15" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contact_me"
            style="@style/TextStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_38"
            android:text="@string/contact_me_by"
            android:textSize="@dimen/sp_21" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/facebook"
                android:layout_width="@dimen/dp_64"
                android:layout_height="@dimen/dp_64"
                app:srcCompat="@drawable/ic_facebook" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/linkedin"
                android:layout_width="@dimen/dp_64"
                android:layout_height="@dimen/dp_64"
                android:layout_marginStart="@dimen/dp_20"
                app:srcCompat="@drawable/ic_linkedin" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/project_source"
            style="@style/TextStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_38"
            android:text="@string/project_source"
            android:textSize="@dimen/sp_21" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/clickHere"
            style="@style/TextStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:autoLink="web"
            android:text="@string/click_here"
            android:textSize="@dimen/sp_15" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/version"
        style="@style/TextStyleBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_16"
        android:textSize="@dimen/sp_15" />

</RelativeLayout>